--- a/src/app/_toolbar.scss
+++ b/src/app/_toolbar.scss
@@ -6,7 +6,7 @@
   .children-3xh0VB:after {
     content: none;
   }
-  .searchBar-zdmu7v {
+  .searchBar-jGtisZ {
     background: var(--background-dark);
   }
 }
