--- a/src/chat/_index.scss
+++ b/src/chat/_index.scss
@@ -1,6 +1,7 @@
-@forward 'container';
-@forward 'form';
-@forward 'message';
-@forward 'dividers';
-@forward 'bars';
-@forward 'threads';
+@forward './container';
+@forward './form';
+@forward './message';
+@forward './dividers';
+@forward './bars';
+@forward './threads';
+@forward './searchresults';
