--- a/src/chat/_searchresults.scss
+++ b/src/chat/_searchresults.scss
@@ -6,6 +6,9 @@
   .searchHeader-1r_ZSh {
     background: var(--background-light);
     box-shadow: var(--box-shadow-alt);
+    .item-3XjbnG.selected-g-kMVV {
+      background: rgb(var(--accent));
+    }
   }
   .channelName-3w2Y3c {
     background: var(--background-alt);
@@ -14,6 +17,9 @@
   .searchResult-O9NDji {
     border: none;
     background: var(--background-light);
+    .cozy-VmLDNB {
+      margin: 0 !important;
+    }
   }
   .searchResultMessage-1fxgXh {
     .cozy-VmLDNB {
