--- a/src/members/_member.scss
+++ b/src/members/_member.scss
@@ -13,7 +13,8 @@
     background: rgba(var(--accent), 1);
     .roleColor-rz2vM0,
     .activity-2EQDZv,
-    .premiumIcon-1rDbWQ {
+    .premiumIcon-1rDbWQ,
+    .username-i5-wv- span {
       color: #fff !important;
     }
     rect[fill="#43b581"],
