--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -1,5 +1,5 @@
-@forward 'home';
-@forward 'friends';
-@forward 'serverboost';
-@forward 'nitro';
-@forward 'discovery';
+@forward './home';
+@forward './friends';
+@forward './serverboost';
+@forward './nitro';
+@forward './discovery';
