--- a/src/popouts/_search.scss
+++ b/src/popouts/_search.scss
@@ -3,7 +3,7 @@
     background: var(--background-light);
     box-shadow: var(--box-shadow);
   }
-  .option-2KkUJO {
+  .option-ayUoaq {
     &:after {
       background: linear-gradient(90deg, transparent, var(--background-light));
     }
