--- a/src/settings/_index.scss
+++ b/src/settings/_index.scss
@@ -1,4 +1,4 @@
-@forward 'global';
-@forward 'user';
-@forward 'guild';
-@forward 'bd';
+@forward './global';
+@forward './user';
+@forward './guild';
+@forward './bd';
