--- a/src/settings/user/_index.scss
+++ b/src/settings/user/_index.scss
@@ -1,5 +1,5 @@
-@forward 'myaccount';
-@forward 'authapps';
-@forward 'connections';
-@forward 'voicevideo';
-@forward 'billing';
+@forward './myaccount';
+@forward './authapps';
+@forward './connections';
+@forward './voicevideo';
+@forward './billing';
