--- a/src/app/_index.scss
+++ b/src/app/_index.scss
@@ -1,7 +1,6 @@
-@forward 'app';
-@forward 'font';
-@forward 'toolbar';
-@forward 'scrollbars';
-@forward 'scrollers';
-@forward 'tooltips';
-@forward 'version';
+@forward './app';
+@forward './font';
+@forward './toolbar';
+@forward './scrollbars';
+@forward './scrollers';
+@forward './tooltips';
