--- a/src/inputs/_index.scss
+++ b/src/inputs/_index.scss
@@ -1,6 +1,6 @@
-@forward 'button';
-@forward 'input';
-@forward 'select';
-@forward 'radiogroup';
-@forward 'slider';
-@forward 'checkbox';
+@forward './button';
+@forward './input';
+@forward './select';
+@forward './radiogroup';
+@forward './slider';
+@forward './checkbox';
