--- a/src/settings/guild/_index.scss
+++ b/src/settings/guild/_index.scss
@@ -1,4 +1,4 @@
-@forward 'auditlog';
-@forward 'roles';
-@forward 'booststatus';
-@forward 'community';
+@forward './auditlog';
+@forward './roles';
+@forward './booststatus';
+@forward './community';
