--- a/src/theme/sidebar/_header.scss
+++ b/src/theme/sidebar/_header.scss
@@ -8,4 +8,11 @@
       background: transparent;
     }
   }
+
+  .searchBar-3TnChZ {
+    box-shadow: none;
+  }
+  .searchBarComponent-3N7dCG {
+    background: var(--background-dark);
+  }
 }
