--- a/src/theme/popouts/_pins.scss
+++ b/src/theme/popouts/_pins.scss
@@ -14,7 +14,7 @@
     border: none;
   }
   .messageGroupCozy-3v_RqN {
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0 !important;
+    padding: 8px 8px 8px 0 !important;
   }
 }
