Fixed for new update

--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -8,6 +8,9 @@
       content: none;
     }
   }
+  .chatContent-3KubbW {
+    background: transparent;
+  }
   .operations-3q3u6E > a {
     color: rgb(var(--accent), 1);
   }
