--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -2,6 +2,9 @@
   .panels-3wFtMD {
     background: var(--background);
   }
+  .container-YkUktl {
+    background: transparent;
+  }
   .container-1zzFcN {
     border: none;
   }
