--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -1,6 +1,9 @@
 #app-mount {
-  .privateChannels-oVe7HL {
+	.privateChannels-oVe7HL {
     background: transparent;
+		.scroller-WSmht3 {
+			background: transparent;
+		}
   }
   .channel-1Shao0 {
     margin-left: 0;
@@ -21,4 +24,9 @@
       background: rgba(var(--accent), 1);
     }
   }
+
+	// right user profile
+	.userPanelOuter-xc-WYi {
+		background: var(--background-alt);
+	}
 }
