--- a/src/theme/sidebar/_index.scss
+++ b/src/theme/sidebar/_index.scss
@@ -1,6 +1,6 @@
 @forward './container';
 @forward './panels';
 @forward './channel';
-@forward './category';
 @forward './header';
 @forward './unreadbar';
+@forward './dms';
