--- a/src/theme/guilds/_container.scss
+++ b/src/theme/guilds/_container.scss
@@ -1,6 +1,6 @@
 #app-mount .guilds-2JjMmN {
   background: var(--background-dark);
-  .scrollerBase-_bVAAt {
+  .scrollerBase-1Pkza4 {
     background: var(--background-dark);
     &::-webkit-scrollbar {
       display: none;
