--- a/src/theme/guilds/_server.scss
+++ b/src/theme/guilds/_server.scss
@@ -3,6 +3,7 @@
   .wrapper-3kah-n {
     &.selected-1Drb7Z .childWrapper-1j_1ub {
       background: rgb(var(--accent), 1);
+      color: var(--accent-text);
     }
   }
   .childWrapper-1j_1ub {
