--- a/src/theme/inputs/_slider.scss
+++ b/src/theme/inputs/_slider.scss
@@ -1,5 +1,5 @@
 #app-mount {
-  .barFill-2Bh7CX {
-    background: rgba(var(--accent), 1);
+  .barFill-3RgCsY {
+    background: rgb(var(--accent), 1);
   }
 }
