--- a/src/theme/pages/_discovery.scss
+++ b/src/theme/pages/_discovery.scss
@@ -1,6 +1,6 @@
 #app-mount {
   .categoryItem-1QIroW.selectedCategoryItem-FHKU_o .itemInner-gPkiWb {
-    background: rgba(var(--accent), 1);
+    background: rgb(var(--accent), 1);
   }
 
   .pageWrapper-2PwDoS {
