--- a/src/theme/popouts/_emojipicker.scss
+++ b/src/theme/popouts/_emojipicker.scss
@@ -15,7 +15,7 @@
       border-color: var(--background-light);
     }
     &:focus-within {
-      border-color: rgba(var(--accent), 1);
+      border-color: rgb(var(--accent), 1);
     }
   }
 
