--- a/src/theme/settings/user/_billing.scss
+++ b/src/theme/settings/user/_billing.scss
@@ -1,4 +1,4 @@
-#app-mount [aria-label="USER_SETTINGS"] {
+#app-mount .layer-86YKbF:not(.baseLayer-W6S8cY) {
   .paymentPane-ut5qKZ {
     background: var(--background-alt);
   }
