--- a/src/theme/settings/user/_myaccount.scss
+++ b/src/theme/settings/user/_myaccount.scss
@@ -1,4 +1,4 @@
-#app-mount [aria-label="USER_SETTINGS"] {
+#app-mount .layer-86YKbF:not(.baseLayer-W6S8cY) {
   .accountProfileCard-lbN7n- {
 		background: var(--background-alt);
 	}
