--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -21,7 +21,7 @@
       left: 0;
       width: 4px;
       height: 100%;
-      background: rgba(var(--accent), 1);
+      background: rgb(var(--accent), 1);
     }
   }
 
