Fixed for new update

--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -1,14 +1,14 @@
 #app-mount {
-  .chat-2ZfjoI {
+  .chat-9g_3Xj {
     background: var(--background);
     .scrollerSpacer-3AqkT9 {
       height: 25px;
     }
-    .content-1jQy2l:before {
+    .content-18rAwf:before {
       content: none;
     }
   }
-  .chatContent-3KubbW {
+  .chatContent-2O4SXb {
     background: transparent;
   }
   .operations-3q3u6E > a {
