--- a/src/theme/chat/_form.scss
+++ b/src/theme/chat/_form.scss
@@ -1,6 +1,6 @@
 #app-mount {
   // Chat box
-  .form-3gdLxP {
+  .form-3qe0Ni {
     &:before {
       content: none;
     }
@@ -11,13 +11,13 @@
     border-radius: var(--border-radius);
 
   }
-  .placeholder-1_mJY1 {
+  .placeholder-1rCBhr {
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 1.5px;
     font-size: 12px;
   }
-  .placeholder-1_mJY1,
+  .placeholder-1rCBhr,
   .slateTextArea-27tjG0 {
     padding: 15px 15px 15px 0;
   }
