--- a/src/theme/members/_container.scss
+++ b/src/theme/members/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-  .container-2o3qEW,
-  .members-3WRCEx,
-  .members-3WRCEx > div {
+  .container-2vWgD2,
+  .members-2y1nVj,
+  .members-2y1nVj > div {
     background: transparent;
   }
 }
