--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -2,10 +2,12 @@
   .panels-3wFtMD {
     background: var(--background);
   }
+  .activityPanel-9icbyU
   .container-YkUktl {
     background: transparent;
   }
-  .container-1zzFcN {
+  .container-1CH86i,
+  .activityPanel-9icbyU {
     background: transparent;
     border: none;
   }
