--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -3,7 +3,7 @@
     background: var(--background);
   }
   .activityPanel-9icbyU
-  .container-YkUktl {
+  .container-1CH86i {
     background: transparent;
   }
   .container-1CH86i,
